--- a/frontend/frontend/src/app/components/global-list/global-list.component.css
+++ b/frontend/frontend/src/app/components/global-list/global-list.component.css
@@ -77,5 +77,13 @@ tr:hover td {
   background-color: #c0392b;
 }
 
+.user-img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 8px;
+  object-fit: cover;
+}
+
 
 
